--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.logging.level=warn
+org.gradle.java.installations.auto-detect=false
+fabric.loom.multiProjectOptimisation=true
 # Mod Properties
 version=1.0.0
 group=net.stracciatella
