--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,11 @@
 [versions]
-stracciatella-gradle = "0.2.30"
+stracciatella-gradle = "0.2.33"
 minecraft = "1.20.2"
-fabric-loader = "0.14.22"
-fabric-api = "0.90.0+1.20.2"
+fabric-loader = "0.14.24"
+fabric-api = "0.90.7+1.20.2"
 junit-jupiter = "5.9.2"
 junit-platform-launcher = "1.9.2"
 checkstyle = "10.12.4"
-sodium = "mc1.20.2-0.5.3"
-indium = "1.0.27+mc1.20.1"
-continuity = "3.0.0-beta.4+1.20.2"
-cull-less-leaves = "1.3.0"
-modmenu = "8.0.0"
-boosted-brightness = "2.2.0"
-reeses-sodium-options = "mc1.20.2-1.6.5"
-sodium-extra = "mc1.20.2-0.5.2"
-yacl = "3.2.1+1.20-fabric"
-auth-me = "8.0.0+1.20.2"
-borderless-mining = "1.1.9+1.20.2"
-cloth-config = "12.0.109+fabric"
 
 [libraries]
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
@@ -25,34 +13,8 @@ fabric-loader = { group = "net.fabricmc", name = "fabric-loader", version.ref = 
 fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.ref = "fabric-api" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit-platform-launcher" }
-sodium = { group = "maven.modrinth", name = "sodium", version.ref = "sodium" }
-indium = { group = "maven.modrinth", name = "indium", version.ref = "indium" }
-continuity = { group = "maven.modrinth", name = "continuity", version.ref = "continuity" }
-cull-less-leaves = { group = "maven.modrinth", name = "cull-less-leaves", version.ref = "cull-less-leaves" }
-modmenu = { group = "maven.modrinth", name = "modmenu", version.ref = "modmenu" }
-boosted-brightness = { group = "maven.modrinth", name = "boosted-brightness", version.ref = "boosted-brightness" }
-reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version.ref = "reeses-sodium-options" }
-sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version.ref = "sodium-extra" }
-yacl = { group = "maven.modrinth", name = "yacl", version.ref = "yacl" }
-auth-me = { group = "maven.modrinth", name = "auth-me", version.ref = "auth-me" }
-borderless-mining = { group = "maven.modrinth", name = "borderless-mining", version.ref = "borderless-mining" }
-cloth-config = { group = "maven.modrinth", name = "cloth-config", version.ref = "cloth-config" }
 
-[bundles]
-mods = [
-    "sodium",
-    "indium",
-    "continuity",
-    "cull-less-leaves",
-    "modmenu",
-    "boosted-brightness",
-    "reeses-sodium-options",
-    #    "sodium-extra",
-    "yacl",
-    "auth-me",
-    "borderless-mining",
-    "cloth-config"
-]
+stracciatella = { group = "net.stracciatella.gradle.plugin", name = "stracciatella", version.ref = "stracciatella-gradle" }
 
 [plugins]
 stracciatella = { id = "net.stracciatella.stracciatella", version.ref = "stracciatella-gradle" }
