--- a/mods.versions.toml
+++ b/mods.versions.toml
@@ -18,7 +18,7 @@ appleskin = "2.5.1+mc1.20.2"
 carpet = "1.4.121"
 carpet-extra = "1.4.118"
 dynamic-fps = "MJxmQ042"
-enhanced-block-entities = "0.9+1.20.2"
+enhanced-block-entities = "0.9.1+1.20.2"
 exordium = "SotsZlJ6"
 farsight = "4836498"
 cupboard = "4795344"
@@ -47,7 +47,7 @@ threadtweak = "0.1.1+mc1.20.2"
 tooltipfix = "1.1.1-1.20"
 tweakeroo = "4788437"
 viafabricplus = "2.9.5"
-xaeros-minimap = "23.8.4_Fabric_1.20.2"
+xaeros-minimap = "23.9.3_Fabric_1.20.2"
 xaeros-world-map = "1.36.0_Fabric_1.20.2"
 reflect = "1.2.4"
 
@@ -71,12 +71,12 @@ appleskin = { group = "maven.modrinth", name = "appleskin", version.ref = "apple
 carpet = { group = "maven.modrinth", name = "carpet", version.ref = "carpet" }
 carpet-extra = { group = "maven.modrinth", name = "carpet-extra", version.ref = "carpet-extra" }
 dynamic-fps = { group = "maven.modrinth", name = "dynamic-fps", version.ref = "dynamic-fps" }
-enhanced-block-entities = { group = "foundationgames", name = "EnhancedBlockEntities", version.ref = "enhanced-block-entities" }
+enhanced-block-entities = { group = "maven.modrinth", name = "ebe", version.ref = "enhanced-block-entities" }
 exordium = { group = "maven.modrinth", name = "exordium", version.ref = "exordium" }
 farsight = { group = "curse.maven", name = "farsight-fabric-579192", version.ref = "farsight" }
 cupboard = { group = "curse.maven", name = "cupboard-326652", version.ref = "cupboard" }
 mixinextras = { group = "io.github.llamalad7", name = "mixinextras-fabric", version.ref = "mixinextras" }
-arrp = { group = "net.devtech", name = "arrp", version.ref = "arrp" }
+arrp = { group = "maven.modrinth", name = "arrp", version.ref = "arrp" }
 jctools-core = { group = "org.jctools", name = "jctools-core", version.ref = "jctools-core" }
 spruceui = { group = "dev.lambdaurora", name = "spruceui", version.ref = "spruceui" }
 basic-math = { group = "me.shedaniel.cloth", name = "basic-math", version.ref = "basic-math" }
