--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ fabric-api = "0.90.7+1.20.2"
 junit-jupiter = "5.9.2"
 junit-platform-launcher = "1.9.2"
 checkstyle = "10.12.4"
+jol = "0.17"
 
 [libraries]
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
@@ -13,6 +14,7 @@ fabric-loader = { group = "net.fabricmc", name = "fabric-loader", version.ref = 
 fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.ref = "fabric-api" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit-platform-launcher" }
+jol-core = { group = "org.openjdk.jol", name = "jol-core", version.ref = "jol" }
 
 stracciatella = { group = "net.stracciatella.gradle.plugin", name = "stracciatella", version.ref = "stracciatella-gradle" }
 
