--- a/mods.versions.toml
+++ b/mods.versions.toml
@@ -2,9 +2,8 @@
 sodium = "mc1.20.2-0.5.3"
 indium = "1.0.27+mc1.20.1"
 continuity = "3.0.0-beta.4+1.20.2"
-cull-less-leaves = "1.3.0"
 modmenu = "8.0.0"
-boosted-brightness = "2.2.0"
+boosted-brightness = "2.2.1"
 reeses-sodium-options = "mc1.20.2-1.6.5"
 sodium-extra = "mc1.20.2-0.5.3"
 caffeine-config = "1.3.0+1.17"
@@ -48,16 +47,21 @@ tooltipfix = "1.1.1-1.20"
 tweakeroo = "4788437"
 viafabricplus = "2.9.5"
 xaeros-minimap = "23.9.3_Fabric_1.20.2"
-xaeros-world-map = "1.36.0_Fabric_1.20.2"
+xaeros-world-map = "1.37.2_Fabric_1.20.2"
 reflect = "1.2.4"
+pridelib = "1.2.0+1.19.4"
+jcpp = "1.4.14"
+glsl-transformer = "2.0.0-pre13"
+antlr4-runtime = "4.11.1"
+seedmapper = "1.5.16"
+seedcrackerx = "2.14.5"
 
 [libraries]
 sodium = { group = "maven.modrinth", name = "sodium", version.ref = "sodium" }
 indium = { group = "maven.modrinth", name = "indium", version.ref = "indium" }
 continuity = { group = "maven.modrinth", name = "continuity", version.ref = "continuity" }
-cull-less-leaves = { group = "maven.modrinth", name = "cull-less-leaves", version.ref = "cull-less-leaves" }
 modmenu = { group = "maven.modrinth", name = "modmenu", version.ref = "modmenu" }
-boosted-brightness = { group = "maven.modrinth", name = "boosted-brightness", version.ref = "boosted-brightness" }
+boosted-brightness = { group = "net.boostedbrightness", name = "BoostedBrightness", version.ref = "boosted-brightness" }
 reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version.ref = "reeses-sodium-options" }
 sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version.ref = "sodium-extra" }
 caffeine-config = { group = "net.caffeinemc", name = "CaffeineConfig", version.ref = "caffeine-config" }
@@ -103,6 +107,12 @@ viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version.ref 
 xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version.ref = "xaeros-minimap" }
 xaeros-world-map = { group = "maven.modrinth", name = "xaeros-world-map", version.ref = "xaeros-world-map" }
 reflect = { group = "net.lenni0451", name = "Reflect", version.ref = "reflect" }
+pridelib = { group = "io.github.queerbric", name = "pridelib", version.ref = "pridelib" }
+jcpp = { group = "org.anarres", name = "jcpp", version.ref = "jcpp" }
+glsl-transformer = { group = "io.github.douira", name = "glsl-transformer", version.ref = "glsl-transformer" }
+antlr4-runtime = { group = "org.antlr", name = "antlr4-runtime", version.ref = "antlr4-runtime" }
+seedmapper = { group = "maven.modrinth", name = "seedmapper", version.ref = "seedmapper" }
+seedcrackerx = { group = "kaptainwutax", name = "seedcrackerx", version.ref = "seedcrackerx" }
 
 [bundles]
 mods = [
@@ -123,7 +133,6 @@ mods = [
     "carpet",
     "carpet-extra",
     "continuity",
-    "cull-less-leaves",
     "dynamic-fps",
     "enhanced-block-entities",
     "exordium",
@@ -151,9 +160,16 @@ mods = [
     "rep",
     "simple-voice-chat",
     "threadtweak",
+    "tooltipfix",
     "tweakeroo",
     "viafabricplus",
     "xaeros-minimap",
     "xaeros-world-map",
-    "reflect"
+    "reflect",
+    "pridelib",
+    "jcpp",
+    "glsl-transformer",
+    "antlr4-runtime",
+    #    "seedmapper",
+#    "seedcrackerx"
 ]
