--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 [versions]
-stracciatella-gradle = "0.2.33"
-minecraft = "1.20.2"
-fabric-loader = "0.14.24"
-fabric-api = "0.90.7+1.20.2"
+stracciatella-gradle = "0.2.34"
+shadow = "8.1.1"
+minecraft = "1.20.4"
+fabric-loader = "0.15.7"
+fabric-api = "0.96.1+1.20.4"
 junit-jupiter = "5.9.2"
 junit-platform-launcher = "1.9.2"
 checkstyle = "10.12.4"
@@ -19,6 +20,7 @@ jol-core = { group = "org.openjdk.jol", name = "jol-core", version.ref = "jol" }
 stracciatella = { group = "net.stracciatella.gradle.plugin", name = "stracciatella", version.ref = "stracciatella-gradle" }
 
 [plugins]
+shadow = {id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
 stracciatella = { id = "net.stracciatella.stracciatella", version.ref = "stracciatella-gradle" }
 stracciatella-fabric = { id = "net.stracciatella.stracciatella.fabric", version.ref = "stracciatella-gradle" }
 stracciatella-base = { id = "net.stracciatella.stracciatella.base", version.ref = "stracciatella-gradle" }
