--- a/mods.versions.toml
+++ b/mods.versions.toml
@@ -1,43 +1,45 @@
 [libraries]
-xaeros-world-map = { group = "maven.modrinth", name = "xaeros-world-map", version = "1.37.8_Fabric_1.20.4" }
-fabric-api = { group = "maven.modrinth", name = "fabric-api", version = "0.96.3+1.20.4" }
-xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version = "23.9.7_Fabric_1.20.4" }
-viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version = "3.0.6" }
+xaeros-world-map = { group = "maven.modrinth", name = "xaeros-world-map", version = "1.38.1_Fabric_1.20.4" }
+fabric-api = { group = "maven.modrinth", name = "fabric-api", version = "0.96.11+1.20.4" }
+xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version = "24.0.3_Fabric_1.20.4" }
+viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version = "3.1.0" }
 tooltipfix = { group = "maven.modrinth", name = "tooltipfix", version = "1.1.1-1.20" }
 threadtweak = { group = "maven.modrinth", name = "threadtweak", version = "0.1.2+mc1.20.4" }
-simple-voice-chat = { group = "maven.modrinth", name = "simple-voice-chat", version = "fabric-1.20.4-2.5.4" }
+simple-voice-chat = { group = "maven.modrinth", name = "simple-voice-chat", version = "fabric-1.20.4-2.5.11" }
 roughly-enough-professions-rep = { group = "maven.modrinth", name = "roughly-enough-professions-rep", version = "2.2.0" }
 rei = { group = "maven.modrinth", name = "rei", version = "14.0.688+fabric" }
-architectury-api = { group = "maven.modrinth", name = "architectury-api", version = "11.0.12+fabric" }
+architectury-api = { group = "maven.modrinth", name = "architectury-api", version = "11.1.17+fabric" }
 cloth-config = { group = "maven.modrinth", name = "cloth-config", version = "13.0.121+fabric" }
-rrls = { group = "maven.modrinth", name = "rrls", version = "4.0.1+mc1.20.4-fabric" }
-mouse-tweaks = { group = "maven.modrinth", name = "mouse-tweaks", version = "1.20-2.25-fabric" }
-modernfix = { group = "maven.modrinth", name = "modernfix", version = "5.13.0+mc1.20.4" }
+rrls = { group = "maven.modrinth", name = "rrls", version = "4.0.2+mc1.20.4-fabric" }
+mouse-tweaks = { group = "maven.modrinth", name = "mouse-tweaks", version = "1.20-2.26-fabric" }
+modernfix = { group = "maven.modrinth", name = "modernfix", version = "5.15.0+mc1.20.4" }
 light-overlay = { group = "maven.modrinth", name = "light-overlay", version = "8.0.0" }
 lambdynamiclights = { group = "maven.modrinth", name = "lambdynamiclights", version = "2.3.4+1.20.4" }
-forcecloseworldloadingscreen = { group = "maven.modrinth", name = "forcecloseworldloadingscreen", version = "2.2.0" }
+forcecloseworldloadingscreen = { group = "maven.modrinth", name = "forcecloseworldloadingscreen", version = "2.2.1" }
 jade = { group = "maven.modrinth", name = "jade", version = "13.3.1" }
 iris = { group = "maven.modrinth", name = "iris", version = "1.6.17+1.20.4" }
 sodium = { group = "maven.modrinth", name = "sodium", version = "mc1.20.4-0.5.8" }
 exordium = { group = "maven.modrinth", name = "exordium", version = "1.2.1-1.20.4" }
 ebe = { group = "maven.modrinth", name = "ebe", version = "0.9.1+1.20.2" }
+dynamic-fps = { group = "maven.modrinth", name = "dynamic-fps", version = "3.4.2" }
 carpet-extra = { group = "maven.modrinth", name = "carpet-extra", version = "1.4.128" }
 carpet = { group = "maven.modrinth", name = "carpet", version = "1.4.128" }
 appleskin = { group = "maven.modrinth", name = "appleskin", version = "2.5.1+mc1.20.3" }
 advanced-chat = { group = "maven.modrinth", name = "advanced-chat", version = "1.4-1.20.3" }
-entityculling = { group = "maven.modrinth", name = "entityculling", version = "1.6.3.1-1.20.4" }
+entityculling = { group = "maven.modrinth", name = "entityculling", version = "1.6.4-1.20.4" }
 auth-me = { group = "maven.modrinth", name = "auth-me", version = "8.0.0+1.20.4" }
 reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version = "mc1.20.4-1.7.2" }
 cull-less-leaves = { group = "maven.modrinth", name = "cull-less-leaves", version = "1.3.0" }
 yacl = { group = "maven.modrinth", name = "yacl", version = "3.3.2+1.20.4-fabric" }
-modmenu = { group = "maven.modrinth", name = "modmenu", version = "9.0.0" }
+modmenu = { group = "maven.modrinth", name = "modmenu", version = "9.1.0-beta.1" }
 continuity = { group = "maven.modrinth", name = "continuity", version = "3.0.0-beta.4+1.20.2" }
 sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version = "mc1.20.4-0.5.4" }
 indium = { group = "maven.modrinth", name = "indium", version = "1.0.30+mc1.20.4" }
+nbt-tooltip = { group = "curse.maven", name = "nbt-tooltip-274816", version = "5168841" }
 tweakeroo = { group = "curse.maven", name = "tweakeroo-297344", version = "5096820" }
 malilib = { group = "curse.maven", name = "malilib-303119", version = "5096807" }
 minihud = { group = "curse.maven", name = "minihud-244260", version = "5096818" }
-litematica = { group = "curse.maven", name = "litematica-308892", version = "4946471" }
+litematica = { group = "curse.maven", name = "litematica-308892", version = "5170070" }
 clumps = { group = "curse.maven", name = "clumps-256717", version = "5025925" }
 
 [bundles]
@@ -64,6 +66,7 @@ mods = [
     "sodium",
     "exordium",
     "ebe",
+    "dynamic-fps",
     "carpet-extra",
     "carpet",
     "appleskin",
@@ -77,6 +80,7 @@ mods = [
     "continuity",
     "sodium-extra",
     "indium",
+    "nbt-tooltip",
     "tweakeroo",
     "malilib",
     "minihud",
