--- a/mods.versions.toml
+++ b/mods.versions.toml
@@ -1,40 +1,40 @@
 [libraries]
-xaeros-world-map = { group = "maven.modrinth", name = "xaeros-world-map", version = "1.38.1_Fabric_1.20.4" }
-fabric-api = { group = "maven.modrinth", name = "fabric-api", version = "0.96.11+1.20.4" }
-xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version = "24.0.3_Fabric_1.20.4" }
-viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version = "3.1.0" }
-tooltipfix = { group = "maven.modrinth", name = "tooltipfix", version = "1.1.1-1.20" }
-threadtweak = { group = "maven.modrinth", name = "threadtweak", version = "0.1.2+mc1.20.4" }
-simple-voice-chat = { group = "maven.modrinth", name = "simple-voice-chat", version = "fabric-1.20.4-2.5.11" }
-roughly-enough-professions-rep = { group = "maven.modrinth", name = "roughly-enough-professions-rep", version = "2.2.0" }
-rei = { group = "maven.modrinth", name = "rei", version = "14.0.688+fabric" }
-architectury-api = { group = "maven.modrinth", name = "architectury-api", version = "11.1.17+fabric" }
-cloth-config = { group = "maven.modrinth", name = "cloth-config", version = "13.0.121+fabric" }
-rrls = { group = "maven.modrinth", name = "rrls", version = "4.0.2+mc1.20.4-fabric" }
-mouse-tweaks = { group = "maven.modrinth", name = "mouse-tweaks", version = "1.20-2.26-fabric" }
-modernfix = { group = "maven.modrinth", name = "modernfix", version = "5.15.0+mc1.20.4" }
-light-overlay = { group = "maven.modrinth", name = "light-overlay", version = "8.0.0" }
-lambdynamiclights = { group = "maven.modrinth", name = "lambdynamiclights", version = "2.3.4+1.20.4" }
-forcecloseworldloadingscreen = { group = "maven.modrinth", name = "forcecloseworldloadingscreen", version = "2.2.1" }
-jade = { group = "maven.modrinth", name = "jade", version = "13.3.1" }
-iris = { group = "maven.modrinth", name = "iris", version = "1.6.17+1.20.4" }
-sodium = { group = "maven.modrinth", name = "sodium", version = "mc1.20.4-0.5.8" }
-exordium = { group = "maven.modrinth", name = "exordium", version = "1.2.1-1.20.4" }
-ebe = { group = "maven.modrinth", name = "ebe", version = "0.9.1+1.20.2" }
-dynamic-fps = { group = "maven.modrinth", name = "dynamic-fps", version = "3.4.2" }
-carpet-extra = { group = "maven.modrinth", name = "carpet-extra", version = "1.4.128" }
-carpet = { group = "maven.modrinth", name = "carpet", version = "1.4.128" }
-appleskin = { group = "maven.modrinth", name = "appleskin", version = "2.5.1+mc1.20.3" }
-advanced-chat = { group = "maven.modrinth", name = "advanced-chat", version = "1.4-1.20.3" }
-entityculling = { group = "maven.modrinth", name = "entityculling", version = "1.6.4-1.20.4" }
-auth-me = { group = "maven.modrinth", name = "auth-me", version = "8.0.0+1.20.4" }
-reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version = "mc1.20.4-1.7.2" }
-cull-less-leaves = { group = "maven.modrinth", name = "cull-less-leaves", version = "1.3.0" }
-yacl = { group = "maven.modrinth", name = "yacl", version = "3.3.2+1.20.4-fabric" }
-modmenu = { group = "maven.modrinth", name = "modmenu", version = "9.1.0-beta.1" }
-continuity = { group = "maven.modrinth", name = "continuity", version = "3.0.0-beta.4+1.20.2" }
-sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version = "mc1.20.4-0.5.4" }
-indium = { group = "maven.modrinth", name = "indium", version = "1.0.30+mc1.20.4" }
+xaeros-world-map = { group = "maven.modrinth", name = "xaeros-world-map", version = "2lbtkEPK" }
+fabric-api = { group = "maven.modrinth", name = "fabric-api", version = "htRy7kbI" }
+xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version = "N5jBKzC0" }
+viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version = "2low4Dcu" }
+tooltipfix = { group = "maven.modrinth", name = "tooltipfix", version = "B2L4LeMV" }
+threadtweak = { group = "maven.modrinth", name = "threadtweak", version = "pc1QuN32" }
+simple-voice-chat = { group = "maven.modrinth", name = "simple-voice-chat", version = "r7e564VW" }
+roughly-enough-professions-rep = { group = "maven.modrinth", name = "roughly-enough-professions-rep", version = "q9eTEsvC" }
+rei = { group = "maven.modrinth", name = "rei", version = "Jhw0fDTs" }
+architectury-api = { group = "maven.modrinth", name = "architectury-api", version = "kVjQWX0l" }
+cloth-config = { group = "maven.modrinth", name = "cloth-config", version = "eBZiZ9NS" }
+rrls = { group = "maven.modrinth", name = "rrls", version = "hAO2J982" }
+mouse-tweaks = { group = "maven.modrinth", name = "mouse-tweaks", version = "mjuG4AYd" }
+modernfix = { group = "maven.modrinth", name = "modernfix", version = "lQs9avbD" }
+light-overlay = { group = "maven.modrinth", name = "light-overlay", version = "xHBA44Di" }
+lambdynamiclights = { group = "maven.modrinth", name = "lambdynamiclights", version = "mrQ8ZiyU" }
+forcecloseworldloadingscreen = { group = "maven.modrinth", name = "forcecloseworldloadingscreen", version = "fyVeLayX" }
+jade = { group = "maven.modrinth", name = "jade", version = "fNHCa6bl" }
+iris = { group = "maven.modrinth", name = "iris", version = "kGdJ11Rt" }
+sodium = { group = "maven.modrinth", name = "sodium", version = "4GyXKCLd" }
+exordium = { group = "maven.modrinth", name = "exordium", version = "WyhKYeMf" }
+ebe = { group = "maven.modrinth", name = "ebe", version = "eIFo7wvq" }
+dynamic-fps = { group = "maven.modrinth", name = "dynamic-fps", version = "shfvdKKK" }
+carpet-extra = { group = "maven.modrinth", name = "carpet-extra", version = "APnGg1O6" }
+carpet = { group = "maven.modrinth", name = "carpet", version = "yYzR60Xd" }
+appleskin = { group = "maven.modrinth", name = "appleskin", version = "pmFyu3Sz" }
+advanced-chat = { group = "maven.modrinth", name = "advanced-chat", version = "tBkISdKZ" }
+entityculling = { group = "maven.modrinth", name = "entityculling", version = "7JR5qJ8f" }
+auth-me = { group = "maven.modrinth", name = "auth-me", version = "HhWVxCH0" }
+reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version = "fkLiGoHs" }
+cull-less-leaves = { group = "maven.modrinth", name = "cull-less-leaves", version = "TFvkv8XK" }
+yacl = { group = "maven.modrinth", name = "yacl", version = "StXMrAsz" }
+modmenu = { group = "maven.modrinth", name = "modmenu", version = "w3icASIi" }
+continuity = { group = "maven.modrinth", name = "continuity", version = "JXhQlDZl" }
+sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version = "M0ndiav7" }
+indium = { group = "maven.modrinth", name = "indium", version = "Aouse6P7" }
 nbt-tooltip = { group = "curse.maven", name = "nbt-tooltip-274816", version = "5168841" }
 tweakeroo = { group = "curse.maven", name = "tweakeroo-297344", version = "5096820" }
 malilib = { group = "curse.maven", name = "malilib-303119", version = "5096807" }
