update all mods

--- a/generateModList.toml
+++ b/generateModList.toml
@@ -18,7 +18,7 @@ modrinth = [
     "modmenu",
     "cull-less-leaves",
     "reeses-sodium-options",
-    "auth-me",
+    "in-game-account-switcher",
     "entityculling",
     "advanced-chat",
     "appleskin",
