--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 stracciatella-gradle = "0.2.37"
-shadow = "8.1.1"
-minecraft = "1.20.6"
+shadow = "8.1.7"
+minecraft = "1.21"
 fabric-loader = "0.15.11"
-fabric-api = "0.97.8+1.20.6"
+fabric-api = "0.100.3+1.21"
 junit-jupiter = "5.9.2"
 junit-platform-launcher = "1.9.2"
 checkstyle = "10.12.4"
@@ -20,7 +20,7 @@ jol-core = { group = "org.openjdk.jol", name = "jol-core", version.ref = "jol" }
 stracciatella = { group = "net.stracciatella.gradle.plugin", name = "stracciatella", version.ref = "stracciatella-gradle" }
 
 [plugins]
-shadow = {id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
+shadow = {id = "io.github.goooler.shadow", version.ref = "shadow" }
 stracciatella = { id = "net.stracciatella.stracciatella", version.ref = "stracciatella-gradle" }
 stracciatella-fabric = { id = "net.stracciatella.stracciatella.fabric", version.ref = "stracciatella-gradle" }
 stracciatella-base = { id = "net.stracciatella.stracciatella.base", version.ref = "stracciatella-gradle" }
