--- a/mods.versions.toml
+++ b/mods.versions.toml
@@ -1,85 +1,87 @@
 [libraries]
-gadget = { group = "maven.modrinth", name = "gadget", version = "OdTBm2dN" }
-fabric-api = { group = "maven.modrinth", name = "fabric-api", version = "1cXs6RWI" }
-owo-lib = { group = "maven.modrinth", name = "owo-lib", version = "1fKeD2p9" }
+yacl = { group = "maven.modrinth", name = "yacl", version = "Y8Wa10Re" }
+fabric-api = { group = "maven.modrinth", name = "fabric-api", version = "bK6OgzFj" }
 xaeros-world-map = { group = "maven.modrinth", name = "xaeros-world-map", version = "ekubtdIk" }
-xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version = "enRPivaa" }
-viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version = "l0HWcsJG" }
+xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version = "X2u4L3vW" }
+viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version = "pGX8JE4z" }
 tooltipfix = { group = "maven.modrinth", name = "tooltipfix", version = "B2L4LeMV" }
-threadtweak = { group = "maven.modrinth", name = "threadtweak", version = "BtMMYDAh" }
-simple-voice-chat = { group = "maven.modrinth", name = "simple-voice-chat", version = "gz0q5n5K" }
-roughly-enough-professions-rep = { group = "maven.modrinth", name = "roughly-enough-professions-rep", version = "fKWJLHS5" }
-rei = { group = "maven.modrinth", name = "rei", version = "l5RqB76W" }
-architectury-api = { group = "maven.modrinth", name = "architectury-api", version = "4JZAlpn7" }
-cloth-config = { group = "maven.modrinth", name = "cloth-config", version = "Yc8omJNb" }
-rrls = { group = "maven.modrinth", name = "rrls", version = "sQBrz3ML" }
+threadtweak = { group = "maven.modrinth", name = "threadtweak", version = "INOJp2Dt" }
+simple-voice-chat = { group = "maven.modrinth", name = "simple-voice-chat", version = "lZkOuATd" }
+ryoamiclights = { group = "maven.modrinth", name = "ryoamiclights", version = "eFFsHtIr" }
+obsidianui = { group = "maven.modrinth", name = "obsidianui", version = "Yt9IWzuL" }
+roughly-enough-professions-rep = { group = "maven.modrinth", name = "roughly-enough-professions-rep", version = "ieyC6IPw" }
+rei = { group = "maven.modrinth", name = "rei", version = "dzBMXNSn" }
+architectury-api = { group = "maven.modrinth", name = "architectury-api", version = "afBcyXjI" }
+cloth-config = { group = "maven.modrinth", name = "cloth-config", version = "7jtvrmVP" }
+rrls = { group = "maven.modrinth", name = "rrls", version = "ALXVhZOT" }
+nbttooltip = { group = "maven.modrinth", name = "nbttooltip", version = "w0reHqvu" }
 mouse-tweaks = { group = "maven.modrinth", name = "mouse-tweaks", version = "ylmBQ38A" }
-modernfix = { group = "maven.modrinth", name = "modernfix", version = "AFvoBfkx" }
-light-overlay = { group = "maven.modrinth", name = "light-overlay", version = "xHBA44Di" }
-lambdynamiclights = { group = "maven.modrinth", name = "lambdynamiclights", version = "mrQ8ZiyU" }
+modernfix = { group = "maven.modrinth", name = "modernfix", version = "KCOwQkKi" }
+lighty = { group = "maven.modrinth", name = "lighty", version = "fk7e7Iej" }
 forcecloseworldloadingscreen = { group = "maven.modrinth", name = "forcecloseworldloadingscreen", version = "UwDrIjNb" }
-jade = { group = "maven.modrinth", name = "jade", version = "ZMaraV5t" }
-iris = { group = "maven.modrinth", name = "iris", version = "RYnrr5zv" }
-sodium = { group = "maven.modrinth", name = "sodium", version = "dNHeFokL" }
-exordium = { group = "maven.modrinth", name = "exordium", version = "WyhKYeMf" }
+jade = { group = "maven.modrinth", name = "jade", version = "2PamFbp4" }
+iris = { group = "maven.modrinth", name = "iris", version = "kuOV4Ece" }
+sodium = { group = "maven.modrinth", name = "sodium", version = "RncWhTxD" }
+gamma-utils = { group = "maven.modrinth", name = "gamma-utils", version = "Nl43K1A6" }
+gadget = { group = "maven.modrinth", name = "gadget", version = "SAo88rbs" }
+owo-lib = { group = "maven.modrinth", name = "owo-lib", version = "AVkXApBi" }
 ebe = { group = "maven.modrinth", name = "ebe", version = "8OuTJDGd" }
-dynamic-fps = { group = "maven.modrinth", name = "dynamic-fps", version = "GzuwoJDO" }
-carpet-extra = { group = "maven.modrinth", name = "carpet-extra", version = "APnGg1O6" }
-carpet = { group = "maven.modrinth", name = "carpet", version = "yYzR60Xd" }
-appleskin = { group = "maven.modrinth", name = "appleskin", version = "YxFxnyd4" }
+dynamic-fps = { group = "maven.modrinth", name = "dynamic-fps", version = "RZDYy0mt" }
+appleskin = { group = "maven.modrinth", name = "appleskin", version = "fG1xJao0" }
 advanced-chat = { group = "maven.modrinth", name = "advanced-chat", version = "5ddOPqgR" }
 entityculling = { group = "maven.modrinth", name = "entityculling", version = "Bu3hSiJb" }
-in-game-account-switcher = { group = "maven.modrinth", name = "in-game-account-switcher", version = "Ntm21uBW" }
-reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version = "DNJFe2me" }
-cull-less-leaves = { group = "maven.modrinth", name = "cull-less-leaves", version = "TFvkv8XK" }
-yacl = { group = "maven.modrinth", name = "yacl", version = "Y8Wa10Re" }
+reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version = "6gZ19wc6" }
+cull-leaves = { group = "maven.modrinth", name = "cull-leaves", version = "JnCn3KSm" }
 modmenu = { group = "maven.modrinth", name = "modmenu", version = "xhN1IvHi" }
-placeholder-api = { group = "maven.modrinth", name = "placeholder-api", version = "Olmswxzt" }
+placeholder-api = { group = "maven.modrinth", name = "placeholder-api", version = "cE5TczQr" }
 continuity = { group = "maven.modrinth", name = "continuity", version = "NksUpFjf" }
 sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version = "uuhVlRGv" }
-indium = { group = "maven.modrinth", name = "indium", version = "w4F7PG0f" }
-clumps = { group = "curse.maven", name = "clumps-256717", version = "5430024" }
+indium = { group = "maven.modrinth", name = "indium", version = "Z8VpxxGh" }
+auth-me = { group = "maven.modrinth", name = "auth-me", version = "WrVFwS4j" }
+farsight-fabric = { group = "curse.maven", name = "farsight-fabric-579192", version = "5531413" }
+cupboard = { group = "curse.maven", name = "cupboard-326652", version = "5477517" }
 
 [bundles]
 mods = [
-    #    "gadget",
+    "yacl",
     "fabric-api",
-    "owo-lib",
     "xaeros-world-map",
     "xaeros-minimap",
     "viafabricplus",
     "tooltipfix",
-    #    "threadtweak",
+    "threadtweak",
     "simple-voice-chat",
+    "ryoamiclights",
+    "obsidianui",
     "roughly-enough-professions-rep",
     "rei",
     "architectury-api",
     "cloth-config",
     "rrls",
+    "nbttooltip",
     "mouse-tweaks",
     "modernfix",
-    "light-overlay",
-    #    "lambdynamiclights",
-    #    "forcecloseworldloadingscreen",
+    "lighty",
+    "forcecloseworldloadingscreen",
     "jade",
     "iris",
     "sodium",
-    #    "exordium",
-    #    "ebe",
+    "gamma-utils",
+    "gadget",
+    "owo-lib",
+    "ebe",
     "dynamic-fps",
-    #    "carpet-extra",
-    #    "carpet",
     "appleskin",
     "advanced-chat",
     "entityculling",
-    "in-game-account-switcher",
     "reeses-sodium-options",
-#    "cull-less-leaves",
-    "yacl",
+    "cull-leaves",
     "modmenu",
     "placeholder-api",
     "continuity",
     "sodium-extra",
     "indium",
-    #    "clumps",
+    "auth-me",
+    "farsight-fabric",
+    "cupboard",
 ]
