--- a/mods.versions2.toml
+++ b/mods.versions2.toml
@@ -1,159 +1,85 @@
-[versions]
-sodium = "mc1.20.2-0.5.3"
-indium = "1.0.27+mc1.20.1"
-continuity = "3.0.0-beta.4+1.20.2"
-cull-less-leaves = "1.3.0"
-modmenu = "8.0.0"
-boosted-brightness = "2.2.0"
-reeses-sodium-options = "mc1.20.2-1.6.5"
-sodium-extra = "mc1.20.2-0.5.3"
-caffeine-config = "1.3.0+1.17"
-yacl = "3.2.1+1.20-fabric"
-auth-me = "8.0.0+1.20.2"
-borderless-mining = "1.1.9+1.20.2"
-entity-culling = "BDwHAdWc"
-advanced-chat = "bLHDrebO"
-cloth-config = "12.0.111"
-appleskin = "2.5.1+mc1.20.2"
-carpet = "1.4.121"
-carpet-extra = "1.4.118"
-dynamic-fps = "MJxmQ042"
-enhanced-block-entities = "0.9.1+1.20.2"
-exordium = "SotsZlJ6"
-farsight = "4836498"
-cupboard = "4795344"
-mixinextras = "0.2.0-rc.5"
-arrp = "0.8.0"
-jctools-core = "4.0.1"
-spruceui = "5.0.3+1.20.2"
-basic-math = "0.6.1"
-iris = "1.6.10+1.20.2"
-jade = "12.2.1"
-forcecloseworldloadingscreen = "2.2.0"
-lambdynamiclights = "2.3.3+1.20.2"
-light-overlay = "8.0.0"
-litematica = "4789765"
-malilib = "4788432"
-architectury = "10.0.15+fabric"
-meteor = "0.5.5-SNAPSHOT"
-minihud = "4793994"
-modernfix = "5.9.3+mc1.20.2"
-mouse-tweaks = "1.20-2.25-fabric"
-rrls = "3.2.2+mc1.20.2-fabric"
-rei = "13.0.678+fabric"
-rep = "2.1.0"
-simple-voice-chat = "fabric-1.20.2-2.4.28"
-threadtweak = "0.1.1+mc1.20.2"
-tooltipfix = "1.1.1-1.20"
-tweakeroo = "4788437"
-viafabricplus = "2.9.5"
-xaeros-minimap = "23.9.3_Fabric_1.20.2"
-xaeros-world-map = "1.36.0_Fabric_1.20.2"
-reflect = "1.2.4"
-
 [libraries]
-#sodium = { group = "maven.modrinth", name = "sodium", version.ref = "sodium" }
-#indium = { group = "maven.modrinth", name = "indium", version.ref = "indium" }
-#continuity = { group = "maven.modrinth", name = "continuity", version.ref = "continuity" }
-#cull-less-leaves = { group = "maven.modrinth", name = "cull-less-leaves", version.ref = "cull-less-leaves" }
-#modmenu = { group = "maven.modrinth", name = "modmenu", version.ref = "modmenu" }
-#boosted-brightness = { group = "maven.modrinth", name = "boosted-brightness", version.ref = "boosted-brightness" }
-#reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version.ref = "reeses-sodium-options" }
-#sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version.ref = "sodium-extra" }
-caffeine-config = { group = "net.caffeinemc", name = "CaffeineConfig", version.ref = "caffeine-config" }
-yacl = { group = "maven.modrinth", name = "yacl", version.ref = "yacl" }
-#auth-me = { group = "maven.modrinth", name = "auth-me", version.ref = "auth-me" }
-borderless-mining = { group = "maven.modrinth", name = "borderless-mining", version.ref = "borderless-mining" }
-#entity-culling = { group = "maven.modrinth", name = "entityculling", version.ref = "entity-culling" }
-#advanced-chat = { group = "maven.modrinth", name = "advanced-chat", version.ref = "advanced-chat" }
-cloth-config = { group = "me.shedaniel.cloth", name = "cloth-config-fabric", version.ref = "cloth-config" }
-#appleskin = { group = "maven.modrinth", name = "appleskin", version.ref = "appleskin" }
-#carpet = { group = "maven.modrinth", name = "carpet", version.ref = "carpet" }
-#carpet-extra = { group = "maven.modrinth", name = "carpet-extra", version.ref = "carpet-extra" }
-#dynamic-fps = { group = "maven.modrinth", name = "dynamic-fps", version.ref = "dynamic-fps" }
-#enhanced-block-entities = { group = "maven.modrinth", name = "ebe", version.ref = "enhanced-block-entities" }
-#exordium = { group = "maven.modrinth", name = "exordium", version.ref = "exordium" }
-#farsight = { group = "curse.maven", name = "farsight-fabric-579192", version.ref = "farsight" }
-cupboard = { group = "curse.maven", name = "cupboard-326652", version.ref = "cupboard" }
-mixinextras = { group = "io.github.llamalad7", name = "mixinextras-fabric", version.ref = "mixinextras" }
-arrp = { group = "maven.modrinth", name = "arrp", version.ref = "arrp" }
-jctools-core = { group = "org.jctools", name = "jctools-core", version.ref = "jctools-core" }
-spruceui = { group = "dev.lambdaurora", name = "spruceui", version.ref = "spruceui" }
-basic-math = { group = "me.shedaniel.cloth", name = "basic-math", version.ref = "basic-math" }
-#iris = { group = "maven.modrinth", name = "iris", version.ref = "iris" }
-#jade = { group = "maven.modrinth", name = "jade", version.ref = "jade" }
-#forcecloseworldloadingscreen = { group = "maven.modrinth", name = "forcecloseworldloadingscreen", version.ref = "forcecloseworldloadingscreen" }
-#lambdynamiclights = { group = "maven.modrinth", name = "lambdynamiclights", version.ref = "lambdynamiclights" }
-#light-overlay = { group = "maven.modrinth", name = "light-overlay", version.ref = "light-overlay" }
-#litematica = { group = "curse.maven", name = "litematica-308892", version.ref = "litematica" }
-malilib = { group = "curse.maven", name = "malilib-303119", version.ref = "malilib" }
-architectury = { group = "maven.modrinth", name = "architectury-api", version.ref = "architectury" }
-meteor = { group = "meteordevelopment", name = "meteor-client", version.ref = "meteor" }
-#minihud = { group = "curse.maven", name = "minihud-244260", version.ref = "minihud" }
-#modernfix = { group = "maven.modrinth", name = "modernfix", version.ref = "modernfix" }
-#mouse-tweaks = { group = "maven.modrinth", name = "mouse-tweaks", version.ref = "mouse-tweaks" }
-#rrls = { group = "maven.modrinth", name = "rrls", version.ref = "rrls" }
-#rei = { group = "maven.modrinth", name = "rei", version.ref = "rei" }
-#rep = { group = "maven.modrinth", name = "roughly-enough-professions-rep", version.ref = "rep" }
-#simple-voice-chat = { group = "maven.modrinth", name = "simple-voice-chat", version.ref = "simple-voice-chat" }
-#threadtweak = { group = "maven.modrinth", name = "threadtweak", version.ref = "threadtweak" }
-#tooltipfix = { group = "maven.modrinth", name = "tooltipfix", version.ref = "tooltipfix" }
-#tweakeroo = { group = "curse.maven", name = "tweakeroo-297344", version.ref = "tweakeroo" }
-#viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version.ref = "viafabricplus" }
-#xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version.ref = "xaeros-minimap" }
-#xaeros-world-map = { group = "maven.modrinth", name = "xaeros-world-map", version.ref = "xaeros-world-map" }
-reflect = { group = "net.lenni0451", name = "Reflect", version.ref = "reflect" }
+gadget = { group = "maven.modrinth", name = "gadget", version = "OdTBm2dN" }
+fabric-api = { group = "maven.modrinth", name = "fabric-api", version = "1cXs6RWI" }
+owo-lib = { group = "maven.modrinth", name = "owo-lib", version = "1fKeD2p9" }
+xaeros-world-map = { group = "maven.modrinth", name = "xaeros-world-map", version = "ekubtdIk" }
+xaeros-minimap = { group = "maven.modrinth", name = "xaeros-minimap", version = "enRPivaa" }
+viafabricplus = { group = "maven.modrinth", name = "viafabricplus", version = "l0HWcsJG" }
+tooltipfix = { group = "maven.modrinth", name = "tooltipfix", version = "B2L4LeMV" }
+threadtweak = { group = "maven.modrinth", name = "threadtweak", version = "BtMMYDAh" }
+simple-voice-chat = { group = "maven.modrinth", name = "simple-voice-chat", version = "gz0q5n5K" }
+roughly-enough-professions-rep = { group = "maven.modrinth", name = "roughly-enough-professions-rep", version = "fKWJLHS5" }
+rei = { group = "maven.modrinth", name = "rei", version = "l5RqB76W" }
+architectury-api = { group = "maven.modrinth", name = "architectury-api", version = "4JZAlpn7" }
+cloth-config = { group = "maven.modrinth", name = "cloth-config", version = "Yc8omJNb" }
+rrls = { group = "maven.modrinth", name = "rrls", version = "sQBrz3ML" }
+mouse-tweaks = { group = "maven.modrinth", name = "mouse-tweaks", version = "ylmBQ38A" }
+modernfix = { group = "maven.modrinth", name = "modernfix", version = "AFvoBfkx" }
+light-overlay = { group = "maven.modrinth", name = "light-overlay", version = "xHBA44Di" }
+lambdynamiclights = { group = "maven.modrinth", name = "lambdynamiclights", version = "mrQ8ZiyU" }
+forcecloseworldloadingscreen = { group = "maven.modrinth", name = "forcecloseworldloadingscreen", version = "UwDrIjNb" }
+jade = { group = "maven.modrinth", name = "jade", version = "ZMaraV5t" }
+iris = { group = "maven.modrinth", name = "iris", version = "RYnrr5zv" }
+sodium = { group = "maven.modrinth", name = "sodium", version = "dNHeFokL" }
+exordium = { group = "maven.modrinth", name = "exordium", version = "WyhKYeMf" }
+ebe = { group = "maven.modrinth", name = "ebe", version = "8OuTJDGd" }
+dynamic-fps = { group = "maven.modrinth", name = "dynamic-fps", version = "GzuwoJDO" }
+carpet-extra = { group = "maven.modrinth", name = "carpet-extra", version = "APnGg1O6" }
+carpet = { group = "maven.modrinth", name = "carpet", version = "yYzR60Xd" }
+appleskin = { group = "maven.modrinth", name = "appleskin", version = "YxFxnyd4" }
+advanced-chat = { group = "maven.modrinth", name = "advanced-chat", version = "5ddOPqgR" }
+entityculling = { group = "maven.modrinth", name = "entityculling", version = "Bu3hSiJb" }
+in-game-account-switcher = { group = "maven.modrinth", name = "in-game-account-switcher", version = "Ntm21uBW" }
+reeses-sodium-options = { group = "maven.modrinth", name = "reeses-sodium-options", version = "DNJFe2me" }
+cull-less-leaves = { group = "maven.modrinth", name = "cull-less-leaves", version = "TFvkv8XK" }
+yacl = { group = "maven.modrinth", name = "yacl", version = "Y8Wa10Re" }
+modmenu = { group = "maven.modrinth", name = "modmenu", version = "xhN1IvHi" }
+placeholder-api = { group = "maven.modrinth", name = "placeholder-api", version = "Olmswxzt" }
+continuity = { group = "maven.modrinth", name = "continuity", version = "NksUpFjf" }
+sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version = "uuhVlRGv" }
+indium = { group = "maven.modrinth", name = "indium", version = "w4F7PG0f" }
+clumps = { group = "curse.maven", name = "clumps-256717", version = "5430024" }
 
 [bundles]
 mods = [
-    "sodium",
-    "indium",
-    "modmenu",
-    "reeses-sodium-options",
-    "caffeine-config",
-    "sodium-extra",
-    "yacl",
-    "auth-me",
-    "entity-culling",
-    "advanced-chat",
-    "cloth-config",
-    "appleskin",
-    "boosted-brightness",
-    "borderless-mining",
-    "carpet",
-    "carpet-extra",
-    "continuity",
-    "cull-less-leaves",
-    "dynamic-fps",
-    "enhanced-block-entities",
-    "exordium",
-    "farsight",
-    "cupboard",
-    "mixinextras",
-    "arrp",
-    "jctools-core",
-    "spruceui",
-    "basic-math",
-    "iris",
-    "jade",
-    "forcecloseworldloadingscreen",
-    "lambdynamiclights",
-    "light-overlay",
-    "litematica",
-    "malilib",
-    "architectury",
-    "meteor",
-    "minihud",
-    "modernfix",
-    "mouse-tweaks",
-    "rrls",
-    "rei",
-    "rep",
-    "simple-voice-chat",
-    "threadtweak",
-    "tweakeroo",
-    "viafabricplus",
-    "xaeros-minimap",
+    #    "gadget",
+    "fabric-api",
+    "owo-lib",
     "xaeros-world-map",
-    "reflect"
+    "xaeros-minimap",
+    "viafabricplus",
+    "tooltipfix",
+    #    "threadtweak",
+    "simple-voice-chat",
+    "roughly-enough-professions-rep",
+    "rei",
+    "architectury-api",
+    "cloth-config",
+    "rrls",
+    "mouse-tweaks",
+    "modernfix",
+    "light-overlay",
+    #    "lambdynamiclights",
+    #    "forcecloseworldloadingscreen",
+    "jade",
+    "iris",
+    "sodium",
+    #    "exordium",
+    #    "ebe",
+    "dynamic-fps",
+    #    "carpet-extra",
+    #    "carpet",
+    "appleskin",
+    "advanced-chat",
+    "entityculling",
+    "in-game-account-switcher",
+    "reeses-sodium-options",
+    #    "cull-less-leaves",
+    "yacl",
+    "modmenu",
+    "placeholder-api",
+    "continuity",
+    "sodium-extra",
+    "indium",
+    #    "clumps",
 ]
