--- a/mods.versions.toml
+++ b/mods.versions.toml
@@ -22,6 +22,7 @@ forcecloseworldloadingscreen = { group = "maven.modrinth", name = "forceclosewor
 jade = { group = "maven.modrinth", name = "jade", version = "2PamFbp4" }
 iris = { group = "maven.modrinth", name = "iris", version = "kuOV4Ece" }
 sodium = { group = "maven.modrinth", name = "sodium", version = "RncWhTxD" }
+in-game-account-switcher = { group = "maven.modrinth", name = "in-game-account-switcher", version = "RQG6VufY" }
 gamma-utils = { group = "maven.modrinth", name = "gamma-utils", version = "Nl43K1A6" }
 gadget = { group = "maven.modrinth", name = "gadget", version = "SAo88rbs" }
 owo-lib = { group = "maven.modrinth", name = "owo-lib", version = "AVkXApBi" }
@@ -37,7 +38,6 @@ placeholder-api = { group = "maven.modrinth", name = "placeholder-api", version 
 continuity = { group = "maven.modrinth", name = "continuity", version = "NksUpFjf" }
 sodium-extra = { group = "maven.modrinth", name = "sodium-extra", version = "uuhVlRGv" }
 indium = { group = "maven.modrinth", name = "indium", version = "Z8VpxxGh" }
-auth-me = { group = "maven.modrinth", name = "auth-me", version = "WrVFwS4j" }
 farsight-fabric = { group = "curse.maven", name = "farsight-fabric-579192", version = "5531413" }
 cupboard = { group = "curse.maven", name = "cupboard-326652", version = "5477517" }
 
@@ -66,6 +66,7 @@ mods = [
     "jade",
     "iris",
     "sodium",
+    "in-game-account-switcher",
     "gamma-utils",
     "gadget",
     "owo-lib",
@@ -81,7 +82,6 @@ mods = [
     "continuity",
     "sodium-extra",
     "indium",
-    "auth-me",
     "farsight-fabric",
     "cupboard",
 ]
